# open.md

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRD.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  FILE_ASSOCIATIONS.md  QUALITY_AUDIT.md  THEMES.md
docs/assets/github-readme-assets/: asset-brief.json  asset-prompts.md
scripts/: check-bundle.mjs  generate-runtime-themes.mjs  validate-frontend.mjs
src/: image-resources.js  image-resources.test.js  index.html  main.js  main.test.js  mermaid-renderer.js  mermaid-renderer.test.js  styles.css  themes.json  themes.runtime.json  themes.runtime.test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: images.rs  lib.rs
src/core/: reader.js
