[package]
name = "open-md"
version = "0.1.0"
description = "Minimalist Markdown/TXT viewer built with Tauri v2, Rust and Vite."
authors = ["gvastethecreator <https://github.com/gvastethecreator>"]
license = "MIT"
repository = "https://github.com/gvastethecreator/open-md"
homepage = "https://github.com/gvastethecreator/open-md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.13.1"
syntect = "5.3.0"
html-escape = "0.2.13"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-dialog = "2.6.0"
urlencoding = "2.1.3"
tauri-plugin-fs = "2.4.5"
